--- a/src/Components/Chatrooms/ChatroomContent/ChatroomContent.css
+++ b/src/Components/Chatrooms/ChatroomContent/ChatroomContent.css
@@ -4,7 +4,7 @@
     background-color: rgb(238, 234, 234);
 }
 .newMessageBox{
-    border: solid 1px;
+    /* border: solid 1px; */
     height: 7vh;
 }
 
