--- a/src/Components/Chatrooms/ChatroomContent/ChatroomContent.css
+++ b/src/Components/Chatrooms/ChatroomContent/ChatroomContent.css
@@ -2,6 +2,7 @@
     height: 80vh;
     border: solid 1px;
     background-color: rgb(238, 234, 234);
+    overflow-y: scroll;
 }
 .newMessageBox{
     /* border: solid 1px; */
